--- a/contactScreen.css
+++ b/contactScreen.css
@@ -132,26 +132,14 @@ body {
   letter-spacing: var(--letterSpacing);
 }
 
-.contactContainer {
-  border: solid 2px red;
-  display: flex;
-}
-
-.emailContainer {
-  border: solid 2px green;
-  width: 65%;
-  display: flex;
-  flex-direction: column;
-}
-
 .iconsContainer {
   padding-top: 50px;
   padding-bottom: 50px;
-  border: solid 2px red;
   display: flex;
-  gap: 50px;
+  gap: 100px;
+  height: 50vh;
   align-items: center;
-  width: 35%;
+  justify-content: center;
 }
 
 .github,
